# sense_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_task_request.md
msg/: EEGBlock.msg
